# KAP-wiki-map

./: .gitignore  CLAUDE.md  README.md
backend/: .env.dev.example  .env.example  .env.prod.example  .env.ruidong.example  .env.sandbox.example  Dockerfile  Dockerfile.architect  Dockerfile.portal  Dockerfile.storage  Makefile  pyproject.toml  run_architect.py  run_dev.py  run_portal.py  run_storage.py
backend/api/: app_factory.py  deps.py  main.py  main_architect.py  main_portal.py  main_storage.py
backend/api/middleware/: auth.py
backend/api/routers/: analysis.py  architect.py  audit.py  governance.py  health.py  iss_job.py  knowledge.py  observability.py  ontology.py  platform.py  projects.py  qa.py  rebuild.py  recall_test.py  sensitive.py  settings.py  system.py  v15.py  wiki.py
backend/api/schemas/: knowledge.py  projects.py  qa.py  recall_test.py
backend/configs/: llm_settings.json  llm_settings.json.example
backend/scripts-backend/: demo_e2e.py  ingest_energy.py  ingest_mock_data.py  migrate_ontology.py  migrate_partitioned.py  prepare_energy_docs.py  rebuild_incremental.py  test_ruidong.py  verify_e2e.py
backend/templates/_default/: domain-keywords.yaml  judge-thresholds.yaml
backend/templates/energy/: domain-keywords.yaml  judge-thresholds.yaml
backend/templates/manufacturing/: domain-keywords.yaml  judge-thresholds.yaml
backend/tests/integration/: conftest.py  test_live_llm_architect.py  test_live_llm_evolution.py  test_live_llm_smoke.py  test_live_llm_w4_extraction.py  test_live_llm_wiki_quality.py
backend/tests/recall/: golden_dataset.json  test_recall_regression.py
backend/tests/unit/: conftest.py  test_agents_async.py  test_architect_agent.py  test_architect_api.py  test_audit.py  test_auth.py  test_auth_middleware_modes.py  test_chunker.py  test_condition_health.py  test_conflict_detector.py  test_context_aware.py  test_critic.py  test_data_scope.py  test_decision_log.py  test_dingtalk_connector.py  test_distillation_hook.py  test_domain_inference.py  test_embedding_provider.py  test_entity_extractor.py  test_entity_resolver.py  test_evolution_proposer.py  test_evolution_stubs.py  test_extraction_quality.py  test_facet_advisor.py  test_governance_queue_extension.py  test_governance_router_matrix.py  test_graph_store.py  test_hybrid_scorer.py  test_incremental_hash.py  test_incremental_rebuild.py  test_industry_recognizer.py  test_ingest_metrics.py  test_iss_job.py  test_iss_jwt.py  test_judge_decision.py  test_keyword_scorer.py  test_llm_client.py  test_m5_evolution_full.py  test_manufacturing_facets.py  test_metadata_dept_id.py  (+39 more)
design/: index.html
docs/: 01-技术决策书.md  02-产品需求PRD.md  M0-tech-debt-async-plan.md  M0-tech-debt.md  M1-iss-integration.md  _refs-index.md
docs/deployment/: checklist.md  neo4j-physical.md  三中心部署资源清单.md
docs/integration/: iss-job-config.md
docs/progress/: M0-KAP-Lite.md  M0-snapshot.md  M1-snapshot.md  M1-企业级v1.md  M10-评估深化与前端仪表盘.md  M11-自学习闭环与GT工作流.md  M12-自学习闭环到端 + 前端深耕.md  M13-真LLM测试与端到端深耕.md  M14-大规模优化与端到端补强.md  M15-真LLM扩展+反馈告警+多语言.md  M16-i18n+自学习闭环+反馈细分+Wiki可视化.md  M18-Wiki质量闭环+前端管理面板.md  (+18 more)
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
infra/: docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.split.yml  nginx-split.conf  nginx.conf
scripts/: README.md  copy_test_samples.py  fix_refs_mojibake.py  generate_sample_indexes.py  inject_sample_navigation.py  kap-delegate.py  kap-delegate.sh  md_to_docx.py
test-samples/: README.md
(+194 files in other folders)
