[project]
name = "kap-backend"
version = "1.0.0a0"
description = "KAP 知识智能体平台 · 后端（基于 Wiki-map V15 演进）"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "pymilvus>=2.4.0",
    "neo4j>=5.25.0",
    "psycopg[binary]>=3.2.0",
    "redis>=5.2.0",
    "minio>=7.2.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.8.0",
    "numpy>=1.26.0",
    "python-docx>=1.1.0",
    "pyyaml>=6.0.0",
    "pyjwt>=2.10.0",
    "cryptography>=44.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "fakeredis>=2.26.0",
    "respx>=0.21.0",
]
local-models = [
    "transformers>=4.46.0",
    "torch>=2.5.0",
    "sentence-transformers>=3.3.0",
]
# M22 #1 · MinerU 多模态 PDF 解析（保留版式/公式/表格）
# 私有化部署需评估 ~3GB 模型 + ~2GB 内存增量, 镜像可挂 volume 复用
# 安装：pip install "kap-backend[mineru]" 后设 KAP_PDF_PARSER=mineru
mineru = [
    "mineru>=2.0",
]
# M21 #7+#11 · 多格式文档解析（Excel / PPT / 老 .doc 等）
parsers = [
    "openpyxl>=3.1.0",
    "xlrd>=2.0.1",
    "python-pptx>=1.0.0",
    "pdfplumber>=0.11.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["packages*", "api*", "workers*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# M13 #1 · 真 LLM 集成测试默认 skip；显式 `pytest -m live_llm` 才跑
addopts = "-m 'not live_llm'"
markers = [
    "live_llm: integration test that calls a real LLM endpoint (requires network + API key)",
]
